--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,5 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import 'dashboard';
+/* Additional styles */
+@import 'additional-styles/utility-patterns.css';
+@import 'additional-styles/range-slider.css';
+@import 'additional-styles/toggle-switch.css';
+@import 'additional-styles/flatpickr.css';
+@import 'additional-styles/theme.css';
