--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1166,6 +1166,9 @@ select {
 .pointer-events-none {
   pointer-events: none;
 }
+.static {
+  position: static;
+}
 .fixed {
   position: fixed;
 }
@@ -1196,6 +1199,12 @@ select {
 }
 .top-full {
   top: 100%;
+}
+.bottom-0 {
+  bottom: 0px;
+}
+.top-1\/4 {
+  top: 25%;
 }
 .z-0 {
   z-index: 0;
@@ -1346,6 +1355,9 @@ select {
 }
 .mt-5 {
   margin-top: 1.25rem;
+}
+.ml-8 {
+  margin-left: 2rem;
 }
 .box-content {
   box-sizing: content-box;
@@ -1518,6 +1530,10 @@ select {
 }
 .-translate-y-2 {
   --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-95 {
@@ -1878,6 +1894,10 @@ select {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
 .p-4 {
   padding: 1rem;
 }
@@ -1999,6 +2019,9 @@ select {
 }
 .pl-12 {
   padding-left: 3rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
 }
 .text-left {
   text-align: left;
@@ -2360,6 +2383,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
 }
+.hover\:no-underline:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
 .focus\:z-10:focus {
   z-index: 10;
 }
@@ -2691,6 +2718,10 @@ select {
     display: none;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2754,6 +2785,10 @@ select {
 }
 @media (min-width: 1024px) {
 
+  .lg\:static {
+    position: static;
+  }
+
   .lg\:left-auto {
     left: auto;
   }
@@ -2766,12 +2801,20 @@ select {
     z-index: auto;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:inline-flex {
     display: inline-flex;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-20 {
+    width: 5rem;
   }
 
   .lg\:translate-x-0 {
